gitops/manifests/demo-application/demo_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: demo
  labels:
    name: demo
#  annotations:
#    keptn.sh/lifecycle-toolkit: "enabled"
