gitops/manifests/demo-application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  namespace: demo
spec:
  selector:
    app.kubernetes.io/name: featuredemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-preview
  namespace: demo
spec:
  selector:
    app.kubernetes.io/name: featuredemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
